--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.example</groupId>
+    <artifactId>midterm</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <properties>
+    <sonar.projectKey>cs2901-2020-2_midterm-chelaschill</sonar.projectKey>
+    <sonar.organization>cs2901-2020-2</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
+
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
@@ -59,4 +69,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
